Changed segment view to display all non-null attributes

--- a/app/views/segments/show.html.erb
+++ b/app/views/segments/show.html.erb
@@ -1,6 +1,6 @@
 
 <%= @segment.attributes.each do |k,v| %>
-  <% if (v) %>
+  <% if (v != nil) %>
     <p>
       <strong><%= k %>:</strong>
       <%= v %>
